[project]
name = "agentx"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.2",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "uvicorn[standard]>=0.51.0",
]
