[project]
name = "agentx"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "uvicorn[standard]>=0.51.0",
]

# On Linux (our Docker/Render target), pull CPU-only PyTorch wheels instead of
# the default CUDA build — macOS has no CUDA variant to begin with, so local
# dev is unaffected and keeps resolving from the default index (with MPS support).
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system != 'Darwin'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system != 'Darwin'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
